I've added a readme called update.md which sets out in detail what I've done
I've change schemaPage, schema and semanticSchema.json

--- a/python_helper_code_and_jsons/change_filters.ipynb
+++ b/python_helper_code_and_jsons/change_filters.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ee79e3c9-aba9-4129-8377-e6048db4c480",
+   "id": "8ef3d65e-c64e-4ae2-b695-518d0a29ba39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,9 +196,304 @@
     "        return labels\n",
     "    labels = add_label([], \"\", tree) \n",
     "    return labels\n",
-    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c40f3d91-a5e2-4657-8712-eca836d2d7d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cruk = cancer_tree.children[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fe4e7870-2972-4248-8856-3e303c4ca7a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cruk_dicts = {}\n",
+    "for child in cruk.children: \n",
+    "    cp = child.__dict__.copy()\n",
+    "    cp.pop(\"children\")\n",
+    "    cruk_dicts[child.label] = cp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "054b7513-596d-424d-a8d0-0c7274544061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tcga = cancer_tree.children[3]\n",
+    "tcga_dicts = {}\n",
+    "for child in tcga.children: \n",
+    "    cp = child.__dict__.copy()\n",
+    "    cp.pop(\"children\")\n",
+    "    tcga_dicts[child.label] = cp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "685d5bf4-52c1-43fc-bb20-0daee4fb57ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ACC (Adrenocortical carcinoma)': {'id': '0_0_4_0',\n",
+       "  'label': 'ACC (Adrenocortical carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'BLCA (Bladder Urothelial Carcinoma)': {'id': '0_0_4_1',\n",
+       "  'label': 'BLCA (Bladder Urothelial Carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'BRCA (Breast invasive carcinoma)': {'id': '0_0_4_2',\n",
+       "  'label': 'BRCA (Breast invasive carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'CESC (Cervical squamous cell carcinoma and endocervical adenocarcinoma)': {'id': '0_0_4_3',\n",
+       "  'label': 'CESC (Cervical squamous cell carcinoma and endocervical adenocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'CHOL (Cholangiocarcinoma)': {'id': '0_0_4_4',\n",
+       "  'label': 'CHOL (Cholangiocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'CNTL (Controls)': {'id': '0_0_4_5',\n",
+       "  'label': 'CNTL (Controls)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'COAD (Colon adenocarcinoma)': {'id': '0_0_4_6',\n",
+       "  'label': 'COAD (Colon adenocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'DLBC (Lymphoid Neoplasm Diffuse Large B-cell Lymphoma)': {'id': '0_0_4_7',\n",
+       "  'label': 'DLBC (Lymphoid Neoplasm Diffuse Large B-cell Lymphoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'ESCA (Esophageal carcinoma)': {'id': '0_0_4_8',\n",
+       "  'label': 'ESCA (Esophageal carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'FPPP (FFPE Pilot Phase II)': {'id': '0_0_4_9',\n",
+       "  'label': 'FPPP (FFPE Pilot Phase II)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'GBM (Glioblastoma multiforme)': {'id': '0_0_4_10',\n",
+       "  'label': 'GBM (Glioblastoma multiforme)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'HNSC (Head and Neck squamous cell carcinoma)': {'id': '0_0_4_11',\n",
+       "  'label': 'HNSC (Head and Neck squamous cell carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'KICH (Kidney Chromophobe)': {'id': '0_0_4_12',\n",
+       "  'label': 'KICH (Kidney Chromophobe)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'KIRC (Kidney renal clear cell carcinoma)': {'id': '0_0_4_13',\n",
+       "  'label': 'KIRC (Kidney renal clear cell carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'KIRP (Kidney renal papillary cell carcinoma)': {'id': '0_0_4_14',\n",
+       "  'label': 'KIRP (Kidney renal papillary cell carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'LAML (Acute Myeloid Leukemia)': {'id': '0_0_4_15',\n",
+       "  'label': 'LAML (Acute Myeloid Leukemia)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'LCML (Chronic Myelogenous Leukemia)': {'id': '0_0_4_16',\n",
+       "  'label': 'LCML (Chronic Myelogenous Leukemia)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'LGG (Brain Lower Grade Glioma)': {'id': '0_0_4_17',\n",
+       "  'label': 'LGG (Brain Lower Grade Glioma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'LIHC (Liver hepatocellular carcinoma)': {'id': '0_0_4_18',\n",
+       "  'label': 'LIHC (Liver hepatocellular carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'LUAD (Lung adenocarcinoma)': {'id': '0_0_4_19',\n",
+       "  'label': 'LUAD (Lung adenocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'LUSC (Lung squamous cell carcinoma)': {'id': '0_0_4_20',\n",
+       "  'label': 'LUSC (Lung squamous cell carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'MESO (Mesothelioma)': {'id': '0_0_4_21',\n",
+       "  'label': 'MESO (Mesothelioma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'MISC (Miscellaneous)': {'id': '0_0_4_22',\n",
+       "  'label': 'MISC (Miscellaneous)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'OV (Ovarian serous cystadenocarcinoma)': {'id': '0_0_4_23',\n",
+       "  'label': 'OV (Ovarian serous cystadenocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'PAAD (Pancreatic adenocarcinoma)': {'id': '0_0_4_24',\n",
+       "  'label': 'PAAD (Pancreatic adenocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'PCPG (Pheochromocytoma and Paraganglioma)': {'id': '0_0_4_25',\n",
+       "  'label': 'PCPG (Pheochromocytoma and Paraganglioma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'PRAD (Prostate adenocarcinoma)': {'id': '0_0_4_26',\n",
+       "  'label': 'PRAD (Prostate adenocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'READ (Rectum adenocarcinoma)': {'id': '0_0_4_27',\n",
+       "  'label': 'READ (Rectum adenocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'SARC (Sarcoma)': {'id': '0_0_4_28',\n",
+       "  'label': 'SARC (Sarcoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'SKCM (Skin Cutaneous Melanoma)': {'id': '0_0_4_29',\n",
+       "  'label': 'SKCM (Skin Cutaneous Melanoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'STAD (Stomach adenocarcinoma)': {'id': '0_0_4_30',\n",
+       "  'label': 'STAD (Stomach adenocarcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'TGCT (Testicular Germ Cell Tumors)': {'id': '0_0_4_31',\n",
+       "  'label': 'TGCT (Testicular Germ Cell Tumors)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'THCA (Thyroid carcinoma)': {'id': '0_0_4_32',\n",
+       "  'label': 'THCA (Thyroid carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'THYM (Thymoma)': {'id': '0_0_4_33',\n",
+       "  'label': 'THYM (Thymoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'UCEC (Uterine Corpus Endometrial Carcinoma)': {'id': '0_0_4_34',\n",
+       "  'label': 'UCEC (Uterine Corpus Endometrial Carcinoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'UCS (Uterine Carcinosarcoma)': {'id': '0_0_4_35',\n",
+       "  'label': 'UCS (Uterine Carcinosarcoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''},\n",
+       " 'UVM (Uveal Melanoma)': {'id': '0_0_4_36',\n",
+       "  'label': 'UVM (Uveal Melanoma)',\n",
+       "  'category': 'cancerTypes',\n",
+       "  'primaryGroup': 'cancer-type',\n",
+       "  'description': ''}}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tcga_dicts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "48ee74c8-79fb-4dd0-961a-73a6802cff7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathn = lambda n: f\"../src/utils/dummy_data/dataset_{str(n).zfill(2)}.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "65baf17e-6ba0-4864-bd92-c05178484db3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "da43f0dd-3ec2-469d-af62-a738cd8912e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prostate Cancer Active Surveillance MRI Cohort\n",
+      "[{'id': '0_0_0_11_1', 'label': 'C61 Prostate gland', 'category': 'C60-C63 Male genital organs', 'primaryGroup': 'cancer-type', 'description': ''}, {'id': '0_0_1_3_0', 'label': '8090/3 Basal cell carcinoma, NOS', 'category': '809-811 Basal cell neoplasms', 'primaryGroup': 'cancer-type', 'description': ''}, {'id': '0_2_3_2', 'label': 'Imaging Data', 'category': 'Patient study', 'primaryGroup': 'data-type', 'description': ''}, {'id': '0_2_3_3', 'label': 'Longitudinal Follow up', 'category': 'Patient study', 'primaryGroup': 'data-type', 'description': ''}, {'id': '0_1_4', 'label': 'Open to applicants', 'category': 'accessType', 'primaryGroup': 'access-type', 'description': ''}, {'id': '0_0_2_81', 'label': 'Prostate cancer', 'category': 'crukTerms', 'primaryGroup': 'cancer-type', 'description': ''}, {'id': '0_0_4_26', 'label': 'PRAD (Prostate adenocarcinoma)', 'category': 'cancerTypes', 'primaryGroup': 'cancer-type', 'description': ''}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "i+=1\n",
+    "with open(pathn(i)) as f:\n",
+    "    dummy = json.load(f)\n",
     "\n",
-    "\n",
+    "print(dummy[\"summary\"][\"title\"])\n",
+    "print(dummy[\"datasetFilters\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ee79e3c9-aba9-4129-8377-e6048db4c480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "key_label_pairs= (get_labels(cancer_tree) + get_labels(access_tree) + get_labels(data_tree))\n",
     "key_label_dict = dict(key_label_pairs) \n",
     "with open(os.path.join(utils_path, \"key_label_dict.json\"), \"w\") as f:\n",
