--- a/python_helper_code_and_jsons/changing_dummies.ipynb
+++ b/python_helper_code_and_jsons/changing_dummies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "93768fad-5729-4f0c-b144-ee1cc7fdf23c",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "44d0a350-fa9e-4eca-9cb5-8a5b80d3a3eb",
    "metadata": {},
    "outputs": [],
@@ -212,20 +212,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "17718262-ff04-4a9e-aef4-85bc0f60b089",
+   "execution_count": 8,
+   "id": "227b3594-9597-4708-b87b-0e10d75dd156",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "for i in range(1,21):\n",
-    "    with open(pathn(i), \"w\") as f:\n",
-    "        json.dump(jsons[i], f)"
+    "\n",
+    "    with open(pathn(i)) as f:\n",
+    "        dummy = json.load(f)\n",
+    "\n",
+    "        mn = random.randint(0,50)\n",
+    "        mx = mn + random.randint(0,50)\n",
+    "        dummy[\"coverage\"][\"typicalAgeRangeMin\"] = mn\n",
+    "        dummy[\"coverage\"][\"typicalAgeRangeMax\"] = mx\n",
+    "        dummy[\"summary\"][\"dataCustodian\"] = dict([(\"identifier\", \"30f16703-28bc-4f45-9ce5-625d2d3db27d\"), \n",
+    "                                                  (\"name\", \"CRUK\"),(\"logo\", \"https://www.sussex.ac.uk/brand/\"),\n",
+    "                                                  (\"contactPoint\", \"test@test.co.uk\")])\n",
+    "        dummy[\"provenance\"].pop(\"origin\", None)\n",
+    "    \n",
+    "    with open(pathn(i),\"w\") as f:\n",
+    "        json.dump(dummy, f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a9c1671-6288-4341-90a1-22ca2905926f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary.dataCustodian is a string; schema expects an object with name, identifier, contactPoint.\n",
+    "provenance.origin.datasetType is a string array; schema expects objects with { name, subTypes } and the map reads that structure.\n",
+    "coverage.typicalAgeRangeMin/Max are strings; schema expects integers.\n",
+    "provenance.origin is still present even though you said it should be removed (map now tolerates missing origin, but this still doesn’t match schema expectations).\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "541a3c76-14b8-4913-8801-56707f12831c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'spatial': 'United Kingdom',\n",
+       " 'followUp': '1 - 10 Years',\n",
+       " 'typicalAgeRangeMin': 7,\n",
+       " 'typicalAgeRangeMax': 24}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy[\"coverage\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "7ad69905-a796-4b21-8cd0-74e9c5f8d6cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object ` del` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "? del\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f26670b9-677d-48a8-ae33-195682fa322f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -247,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.14.3"
   }
  },
  "nbformat": 4,
