--- a/python_helper_code_and_jsons/munging_dictionaries.ipynb
+++ b/python_helper_code_and_jsons/munging_dictionaries.ipynb
@@ -35,7 +35,9 @@
    "id": "a73567a8-1608-4775-8f5f-b0cd8487b589",
    "metadata": {},
    "outputs": [],
-   "source": "path = \"../src/utils/longer_filter_data_old.js\""
+   "source": [
+    "path = \"../src/utils/longer_filter_data_old.js\""
+   ]
   },
   {
    "cell_type": "code",
@@ -398,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.14.3"
   }
  },
  "nbformat": 4,
